k8s/data-layer.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: banking-app
spec:
  ports:
  - name: amqp
    port: 5672
  - name: management
    port: 15672
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: banking-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
---
apiVersion: v1
kind: Service
metadata:
  name: receiver-db
  namespace: receiver
spec:
  ports:
  - port: 5432
  selector:
    app: receiver-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: receiver-db
  namespace: receiver
spec:
  serviceName: "receiver-db"
  replicas: 1
  selector:
    matchLabels:
      app: receiver-db
  template:
    metadata:
      labels:
        app: receiver-db
    spec:
      containers:
      - name: postgres
        image: postgres:16-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: receiver-storage
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: receiver-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
