k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: default
  labels:
    app: notification-service # This is the selector for the ServiceMonitor
spec:
  selector:
    app: notification-service
  ports:
    - name: http
      protocol: TCP
      port: 3002
      targetPort: 3002
